update contact page, pr protecting email from scanners/spam

--- a/contact.html
+++ b/contact.html
@@ -177,7 +177,7 @@
             Location: Fort Collins, CO | United States
           </p>
           <a href="mailto:ericcjameson@gmail.com">
-            Email: ericcjameson@gmail.com
+            Email: ericcjameson[AT]gmail.com
           </a>
           <br />
           <p>
