update styling and fix issues with iphoneX, Also fix title for larger screens (up to 3000px)

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.3.css"
+      href="dist/css/styles_version2.4.css"
     />
   </head>
 
@@ -42,14 +42,49 @@
             href="index.html"
             role="menu-image"
             target="_self"
+            aria-label="Logo home page button"
+            aria-roledescription="This serves as a logo for the page, sitting in the navbar, so it also acts as a navigation button for the home page"
           >
-            <img src="./img/crue_logo_new.svg" alt="crue logo" height="48" />
+            <img
+              src="./img/crue_logo_new.svg"
+              alt="crue logo"
+              height="48"
+              aria-label="Crue's Logo"
+            />
           </a>
-          <a href="contact.html" role="menuitem" target="_self" class="active"
+          <a
+            href="contact.html"
+            role="menuitem"
+            target="_self"
+            class="active"
+            aria-label="Contact me page button"
+            aria-roledescription="Navigation button for the contact me page."
             >Contact Me
           </a>
-          <a href="work.html" role="menuitem" target="_self">My Projects</a>
-          <a href="about.html" role="menuitem" target="_self">About me</a>
+          <a
+            href="work.html"
+            role="menuitem"
+            target="_self"
+            aria-label="My Projects Page"
+            aria-roledescription="Navigation button for the my projects page"
+            >My Projects
+          </a>
+          <a
+            href="about.html"
+            role="menuitem"
+            target="_self"
+            aria-label="About Me Page"
+            aria-roledescription="Navigation button for the about me page."
+            >About me
+          </a>
+          <a
+            href="index.html"
+            role="menuitem"
+            target="_self"
+            aria-label="Home Page"
+            aria-roledescription="Navigation button for returning to the home page"
+            >Home
+          </a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
@@ -61,7 +96,7 @@
     <section class="content">
       <div class="contact-container">
         <h1 class="secondary-title">
-          Contact <span class="crue-span">Me</span>
+          <span class="crue-span">Contact</span> Me
         </h1>
         <div class="contact-card">
           <form
@@ -144,7 +179,7 @@
                   minlength="5"
                   name="message"
                   id="message"
-                  style="height: 200px;"
+                  style="height: 200px"
                   maxlenght="350"
                   placeholder="Type your message here..."
                 ></textarea>
@@ -159,7 +194,7 @@
                   Submit
                 </button>
                 <br />
-                <span style="font-size: 18px;" class="required-field"
+                <span style="font-size: 18px" class="required-field"
                   >* Indicates a required field.</span
                 >
               </div>
@@ -173,16 +208,12 @@
       <div class="contact-info">
         <h1><span class="crue-span">Let's</span> Connect!</h1>
         <div class="contact-text">
-          <p>
-            Location: Fort Collins, CO | United States
-          </p>
+          <p>Location: Fort Collins, CO | United States</p>
           <a href="mailto:ericcjameson@gmail.com">
             Email: ericcjameson[AT]gmail.com
           </a>
           <br />
-          <p>
-            Phone: (970)-980-8519
-          </p>
+          <p>Phone: (970)-980-8519</p>
         </div>
 
         <div class="cv-container">
