--- a/src/php/thank-you.html
+++ b/src/php/thank-you.html
@@ -29,18 +29,18 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/dist/css/styles_version2.3.css"
+      href="/dist/css/styles_version2.4.css"
     />
   </head>
 
-  <body style="background-color: var(--primary-background);">
-    <div style="margin: 10%;">
+  <body style="background-color: var(--primary-background)">
+    <div style="margin: 10%">
       <h1 class="main-title">Message <span class="crue-span">Sent!</span></h1>
       <h1 class="main-title">
         I'll <span class="crue-span">Connect</span> With You
         <span class="crue-span">Shortly!</span>
       </h1>
-      <p style="text-align: center;">You will be redirected in 3.2.1...</p>
+      <p style="text-align: center">You will be redirected in 3.2.1...</p>
     </div>
     <script>
       setTimeout(function () {
