--- a/chatterbox.html
+++ b/chatterbox.html
@@ -29,7 +29,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.3.css"
+      href="dist/css/styles_version2.4.css"
     />
   </head>
 
@@ -42,17 +42,50 @@
             href="index.html"
             role="menu-image"
             target="_self"
+            aria-label="Logo home page button"
+            aria-roledescription="This serves as a logo for the page, sitting in the navbar, so it also acts as a navigation button for the home page"
           >
             <img
               src="./img/crue_logo_new.svg"
               alt="crue logo"
               height="48"
               width=""
+              aria-label="Crue's Logo"
             />
           </a>
-          <a href="contact.html" role="menuitem" target="_self">Contact Me</a>
-          <a href="work.html" role="menuitem" target="_self">My Projects</a>
-          <a href="about.html" role="menuitem" target="_self">About Me</a>
+          <a
+            href="contact.html"
+            role="menuitem"
+            target="_self"
+            aria-label="Contact me page button"
+            aria-roledescription="Navigation button for the contact me page."
+            >Contact Me</a
+          >
+          <a
+            href="work.html"
+            role="menuitem"
+            target="_self"
+            aria-label="My Projects Page"
+            aria-roledescription="Navigation button for the my projects page"
+            >My Projects</a
+          >
+          <a
+            href="about.html"
+            role="menuitem"
+            target="_self"
+            class="active"
+            aria-label="About Me Page"
+            aria-roledescription="Navigation button for the about me page."
+            >About Me
+          </a>
+          <a
+            href="index.html"
+            role="menuitem"
+            target="_self"
+            aria-label="Home Page"
+            aria-roledescription="Navigation button for returning to the home page"
+            >Home
+          </a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
@@ -116,7 +149,7 @@
           </div>
           <div class="grid-1_img__item">
             <img
-              style="width: 100%;"
+              style="width: 100%"
               src="img/chatPics5.png"
               alt="chatter-box"
             />
@@ -126,7 +159,7 @@
         <div class="grid-2">
           <div class="grid-2_img__item">
             <img
-              style="width: 100%;"
+              style="width: 100%"
               src="img/chatPics1.png"
               alt="chatter-box"
             />
@@ -160,7 +193,7 @@
           </div>
           <div class="grid-1_img__item">
             <img
-              style="width: 100%;"
+              style="width: 100%"
               src="img/chat-comp.png"
               alt="chat wireframes"
             />
@@ -170,7 +203,7 @@
         <div class="single-grid">
           <div class="single-grid__img">
             <img
-              style="width: 100%; margin-top: 0.5rem;"
+              style="width: 100%; margin-top: 0.5rem"
               src="img/chat-group.png"
             />
           </div>
@@ -179,7 +212,7 @@
         <div class="grid-2">
           <div class="grid-2_img__item">
             <img
-              style="width: 100%;"
+              style="width: 100%"
               src="img/chatPics3.png"
               alt="chatter-box"
             />
