--- a/cruebeeflix.html
+++ b/cruebeeflix.html
@@ -29,7 +29,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.3.css"
+      href="dist/css/styles_version2.4.css"
     />
   </head>
 
@@ -42,17 +42,50 @@
             href="index.html"
             role="menu-image"
             target="_self"
+            aria-label="Logo home page button"
+            aria-roledescription="This serves as a logo for the page, sitting in the navbar, so it also acts as a navigation button for the home page"
           >
             <img
               src="./img/crue_logo_new.svg"
               alt="crue logo"
               height="48"
               width=""
+              aria-label="Crue's Logo"
             />
           </a>
-          <a href="contact.html" role="menuitem" target="_self">Contact Me</a>
-          <a href="work.html" role="menuitem" target="_self">My Projects</a>
-          <a href="about.html" role="menuitem" target="_self">About Me</a>
+          <a
+            href="contact.html"
+            role="menuitem"
+            target="_self"
+            aria-label="Contact me page button"
+            aria-roledescription="Navigation button for the contact me page."
+            >Contact Me</a
+          >
+          <a
+            href="work.html"
+            role="menuitem"
+            target="_self"
+            aria-label="My Projects Page"
+            aria-roledescription="Navigation button for the my projects page"
+            >My Projects</a
+          >
+          <a
+            href="about.html"
+            role="menuitem"
+            target="_self"
+            class="active"
+            aria-label="About Me Page"
+            aria-roledescription="Navigation button for the about me page."
+            >About Me
+          </a>
+          <a
+            href="index.html"
+            role="menuitem"
+            target="_self"
+            aria-label="Home Page"
+            aria-roledescription="Navigation button for returning to the home page"
+            >Home
+          </a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
@@ -117,9 +150,7 @@
           -->
         <div class="grid-1">
           <div class="grid-1__item">
-            <h2 class="project-title-left">
-              The Challenge
-            </h2>
+            <h2 class="project-title-left">The Challenge</h2>
             <p class="proj-desc-left">
               The myFlix web application is a highly scalable single page
               application designed for movie lovers. This React project provides
@@ -133,7 +164,7 @@
           </div>
           <div class="grid-1_img__item">
             <img
-              style="width: 100%;"
+              style="width: 100%"
               src="img/my-registration.jpeg"
               alt="myFlix"
             />
@@ -148,15 +179,13 @@
         <div class="grid-2">
           <div class="grid-2_img__item">
             <img
-              style="width: 100%;"
+              style="width: 100%"
               src="img/my-favorites.jpeg"
               alt="myFlix Favorites menu"
             />
           </div>
           <div class="grid-2__item">
-            <h2 class="project-title-left">
-              Tech Stack Explanation
-            </h2>
+            <h2 class="project-title-left">Tech Stack Explanation</h2>
             <p class="proj-desc-left">
               When considering a method for developing myFlix, React was an easy
               choice. React's modular components and flexibility made it easier
@@ -171,9 +200,7 @@
 
         <div class="grid-1">
           <div class="grid-1__item">
-            <h2 class="project-title-left">
-              The Process
-            </h2>
+            <h2 class="project-title-left">The Process</h2>
             <p class="proj-desc-left">
               Designing and developing the myFlix application was an enjoyable
               experience. I first took user stories and converted them into
@@ -188,7 +215,7 @@
           </div>
           <div class="grid-1_img__item">
             <img
-              style="width: 100%;"
+              style="width: 100%"
               src="img/myflix-comp.png"
               alt="myFlix wireframes"
             />
@@ -198,7 +225,7 @@
         <div class="single-grid">
           <div class="single-grid__img">
             <img
-              style="width: 100%; margin-top: 0.5rem;"
+              style="width: 100%; margin-top: 0.5rem"
               src="img/flix-group.png"
             />
           </div>
@@ -207,15 +234,13 @@
         <div class="grid-2">
           <div class="grid-2_img__item">
             <img
-              style="width: 100%;"
+              style="width: 100%"
               src="img/my-main.jpeg"
               alt="myFlix mainView"
             />
           </div>
           <div class="grid-2__item">
-            <h2 class="project-title-left">
-              Lessons Learned
-            </h2>
+            <h2 class="project-title-left">Lessons Learned</h2>
             <p class="proj-desc-left">
               I learned a lot about both backend and frontend programming while
               creating myFlix. I enjoyed the structured nature of both SQL and
