--- a/work.html
+++ b/work.html
@@ -30,7 +30,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.3.css"
+      href="dist/css/styles_version2.4.css"
     /> 
   </head>
 
@@ -43,20 +43,56 @@
             href="index.html"
             role="menu-image"
             target="_self"
+            aria-label="Logo home page button"
+            aria-roledescription="This serves as a logo for the page, sitting in the navbar, so it also acts as a navigation button for the home page"
           >
             <img
               src="./img/crue_logo_new.svg"
               alt="crue logo"
               height="48"
               width=""
+              aria-label="Crue's Logo"
             />
           </a>
-          <a href="contact.html" role="menuitem" target="_self">Contact Me</a>
-          <a href="work.html" role="menuitem" target="_self" class="active"
-          >My Projects
+          <a 
+            href="contact.html" 
+            role="menuitem" 
+            target="_self"
+            aria-label="Contact Me Page"
+            aria-roledescription="Navigation button for the contact me page"
+            >Contact Me
+          </a>
+          <a 
+            href="work.html" 
+            role="menuitem" 
+            target="_self" 
+            class="active"
+            aria-label="My Projects Page"
+            aria-roledescription="Navigation button for the my projects page"
+            >My Projects
         </a>
-          <a href="about.html" role="menuitem" target="_self">About Me</a>
-          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <a 
+            href="about.html" 
+            role="menuitem" 
+            target="_self"
+            aria-label="About Me Page"
+            aria-roledescription="Navigation button for the about me page."
+            >About Me
+          </a>
+          <a
+            href="index.html"
+            role="menuitem"
+            target="_self"
+            aria-label="Home Page"
+            aria-roledescription="Navigation button for returning to the home page"
+          >Home
+        </a>
+          <a 
+            href="javascript:void(0);" 
+            class="icon" 
+            onclick="myFunction()"
+            aria-label="Hamburger menu"
+            aria-roledescription="Hamburger menu expands for more options when opened">
             <i class="fa fa-bars"></i>
           </a>
           <!-- link with class="icon" used to open/close navbar on small screens -->
