--- a/contact.html
+++ b/contact.html
@@ -223,7 +223,7 @@
     </section>
 
     <div class="logo-container">
-      <a href="mailto:cruebeedooobie@gmail.com">
+      <a href="mailto:ericcjameson@gmail.com">
         <img src="img/crue_logo.svg" class="app-logo" alt="Crue Jameson" />
       </a>
     </div>
